@@ -152,6 +152,8 @@ dependencies {
 
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor", withoutStuff
 
+    testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
+    
     testCompile "org.springframework.boot:spring-boot-starter-test", withoutStuff
     testCompile "com.github.gmazzo:okhttp-mock:1.4.1"
     testCompile "com.github.gmazzo:okhttp-mock:1.4.1"
@@ -424,6 +426,12 @@ task runAndPublishConsumerPactTests(type: Test){
     logger.lifecycle("Runs pact Tests")
     testClassesDirs = sourceSets.contractTest.output.classesDirs
     classpath = sourceSets.contractTest.runtimeClasspath
+}
+
+task fortifyScan(type: JavaExec)  {
+    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 runAndPublishConsumerPactTests.dependsOn contract
